<resources>
    <string name="app_name">GridView</string>
    <string name="data_mahasiswa">===DATA MAHASISWA===</string>
    <string name="daftar_nama_mahasiswa">DAFTAR NAMA MAHASISWA</string>
    <string name="menu">======MENU======</string>
    <string name="input_data">Input data</string>
    <string name="view_data_in_list_view">view data in list view</string>
    <string name="view_data_in_grid_view">view data in grid view</string>
    <string name="exit">exit</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
</resources>